<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.8</version>
    </parent>

    <groupId>eu.efti</groupId>
    <artifactId>gate-parent</artifactId>
    <packaging>pom</packaging>
    <version>${revision}</version>
    <name>gate-parent</name>
    <description>gate</description>

    <properties>
        <revision>0.4.2-SNAPSHOT</revision>
        <sonar.coverage.jacoco.xmlReportPaths>
            ${project.basedir}/../coverage-aggregate/target/site/jacoco-aggregate/jacoco.xml
        </sonar.coverage.jacoco.xmlReportPaths>
        <multirabbit.version>2.7.0</multirabbit.version>
        <properties-maven-plugin-version>1.1.0</properties-maven-plugin-version>
        <sonar.projectName>EFTI : efti-gate</sonar.projectName>
        <keycloak.version>22.0.5</keycloak.version>
        <java-jwt.version>4.4.0</java-jwt.version>
        <!--NEXUS-->
        <nexus.home>http://nexus.imprimerienationale.fr</nexus.home>

        <!--encoding-->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!--compilation-->
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>

        <!--lombok-->
        <lombok.version>1.18.28</lombok.version>
        <!--spring cloud-->
        <spring-cloud.version>2022.0.4</spring-cloud.version>
        <openfeign.version>11.7</openfeign.version>

        <!-- Plugins version-->
        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
        <maven-javadoc-plugin.version>3.5.0</maven-javadoc-plugin.version>
        <maven-surefire-plugin.version>3.1.0</maven-surefire-plugin.version>
        <jacoco-maven-plugin.version>0.8.10</jacoco-maven-plugin.version>
        <dependency-check-maven.version>8.3.1</dependency-check-maven.version>
        <maven-site-plugin.version>3.12.1</maven-site-plugin.version>
        <maven-project-info-reports-plugin.version>3.4.3</maven-project-info-reports-plugin.version>
        <maven-apt-plugin.version>1.0.4</maven-apt-plugin.version>
        <maven-changelog-plugin.version>2.3</maven-changelog-plugin.version>

        <multirabbit.version>2.7.0</multirabbit.version>
        <properties-maven-plugin-version>1.1.0</properties-maven-plugin-version>

        <keycloak.version>22.0.5</keycloak.version>
        <java-jwt.version>4.4.0</java-jwt.version>
    </properties>

    <distributionManagement>
        <snapshotRepository>
            <id>snapshots</id>
            <name>Nexus Snapshots Repo</name>
            <url>${nexus.home}/repository/snapshots/</url>
        </snapshotRepository>
        <repository>
            <id>releases</id>
            <name>Nexus Releases Repo</name>
            <url>${nexus.home}/repository/releases/</url>
        </repository>
        <site>
            <id>INGroupeSite</id>
            <!--suppress UnresolvedMavenProperty -->
            <url>file:///${distributionManagement.site.rootpath}/efti/${project.artifactId}</url>
        </site>
    </distributionManagement>

    <scm>
        <connection>scm:git:https://gitlab.imprimerienationale.fr/efti/gate.git</connection>
    </scm>

    <modules>
        <module>commons</module>
        <module>efti-logger</module>
        <module>edelivery-ap-connector</module>
        <module>registry-of-identifiers</module>
        <module>gate</module>
        <module>platform-gate-simulator</module>
    </modules>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.owasp</groupId>
                <artifactId>dependency-check-maven</artifactId>
                <version>8.2.1</version>
                <configuration>
                    <formats>
                        <format>HTML</format>
                        <format>JSON</format>
                    </formats>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.10</version>
                <executions>
                    <execution>
                        <id>jacoco-initialize</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>jacoco-site</id>
                        <phase>package</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.9.1</version>
                <configuration>
                    <locales>fr</locales>
                    <outputEncoding>UTF-8</outputEncoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>3.1.2</version>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>properties-maven-plugin</artifactId>
                <version>${properties-maven-plugin-version}</version>
                <inherited>false</inherited>
                <executions>
                    <execution>
                        <id>sonar</id>
                        <phase>initialize</phase>
                        <goals>
                            <goal>read-project-properties</goal>
                        </goals>
                        <configuration>
                            <files>
                                <file>sonar-project.properties</file>
                            </files>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
            </plugin>
            <plugin>
                <groupId>org.liquibase</groupId>
                <artifactId>liquibase-maven-plugin</artifactId>
                <version>4.25.1</version>
                <configuration>
                    <propertyFile>target/classes/liquibase.properties</propertyFile>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <reporting>
        <plugins>
            <plugin>
                <groupId>org.owasp</groupId>
                <artifactId>dependency-check-maven</artifactId>
                <version>8.2.1</version>
                <configuration>
                    <name>Dependency Check</name>
                </configuration>
                <reportSets>
                    <reportSet>
                        <reports>
                            <report>aggregate</report>
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.10</version>
                <reportSets>
                    <reportSet>
                        <reports>
                            <report>report</report>
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>
            <plugin>
                <groupId>io.github.git-commit-id</groupId>
                <artifactId>git-commit-id-maven-plugin</artifactId>
                <version>5.0.0</version>
            </plugin>
        </plugins>
    </reporting>
</project>

